retrieveUnpackaged/objects/Agency__c.object
<CustomObject>
    <description>The acronyms and agency names for the correspondent</description>
    <fields>
        <fullName>AQAOLead__c</fullName>
        <label>AQAOLead</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A_Mebust</fullName>
                </value>
                <value>
                    <fullName>B_Ogundele</fullName>
                </value>
                <value>
                    <fullName>D_Vallano</fullName>
                </value>
                <value>
                    <fullName>F_Clover</fullName>
                </value>
                <value>
                    <fullName>G_Yoshimura</fullName>
                </value>
                <value>
                    <fullName>J_Williams</fullName>
                </value>
                <value>
                    <fullName>M_Flagg</fullName>
                </value>
                <value>
                    <fullName>M_Kurpius</fullName>
                </value>
                <value>
                    <fullName>R_Chang</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Acronym__c</fullName>
        <inlineHelpText>Abbreviation of Agency Name</inlineHelpText>
        <label>Acronym</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ADEQ</fullName>
                </value>
                <value>
                    <fullName>MaricopaCo-APCD</fullName>
                </value>
                <value>
                    <fullName>PimaCo-DEQ</fullName>
                </value>
                <value>
                    <fullName>PinalCo-AQCD</fullName>
                </value>
                <value>
                    <fullName>Ak-Chin</fullName>
                </value>
                <value>
                    <fullName>FtMcDowell</fullName>
                </value>
                <value>
                    <fullName>GilaRiver-IC</fullName>
                </value>
                <value>
                    <fullName>Hualapai</fullName>
                </value>
                <value>
                    <fullName>Navajo</fullName>
                </value>
                <value>
                    <fullName>SaltRiver-IC</fullName>
                </value>
                <value>
                    <fullName>WhiteMtn</fullName>
                </value>
                <value>
                    <fullName>AmadorCo-APCD</fullName>
                </value>
                <value>
                    <fullName>AntelopeValley-AQMD</fullName>
                </value>
                <value>
                    <fullName>BAAQMD</fullName>
                </value>
                <value>
                    <fullName>ButteCo-AQMD</fullName>
                </value>
                <value>
                    <fullName>CalaverasCo-APCD</fullName>
                </value>
                <value>
                    <fullName>CARB</fullName>
                </value>
                <value>
                    <fullName>ColusaCo-AQMD</fullName>
                </value>
                <value>
                    <fullName>ElDoradoCo-APCD</fullName>
                </value>
                <value>
                    <fullName>FeatherRiver-AQMD</fullName>
                </value>
                <value>
                    <fullName>GlenCo-AQMD</fullName>
                </value>
                <value>
                    <fullName>GreatBasin-UAPCD</fullName>
                </value>
                <value>
                    <fullName>ImperialCo-APCD</fullName>
                </value>
                <value>
                    <fullName>KernCo-APCD</fullName>
                </value>
                <value>
                    <fullName>LADWP</fullName>
                </value>
                <value>
                    <fullName>LakeCo-AQMD</fullName>
                </value>
                <value>
                    <fullName>LassenCo-APCD</fullName>
                </value>
                <value>
                    <fullName>MariposaCo-APCD</fullName>
                </value>
                <value>
                    <fullName>MendocinoCo-AQMD</fullName>
                </value>
                <value>
                    <fullName>ModocCo-APCD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ID__c</fullName>
        <displayFormat>{0}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>PQAOID__c</fullName>
        <label>PQAOID</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ADEQ</fullName>
                </value>
                <value>
                    <fullName>MaricopaCo_APCD</fullName>
                </value>
                <value>
                    <fullName>PimaCo-DEQ</fullName>
                </value>
                <value>
                    <fullName>Ak-Chin</fullName>
                </value>
                <value>
                    <fullName>FtMcDowell</fullName>
                </value>
                <value>
                    <fullName>GilaRiver-IC</fullName>
                </value>
                <value>
                    <fullName>Hualapai</fullName>
                </value>
                <value>
                    <fullName>Navajo</fullName>
                </value>
                <value>
                    <fullName>SaltRiver-IC</fullName>
                </value>
                <value>
                    <fullName>WhiteMtn</fullName>
                </value>
                <value>
                    <fullName>CARB</fullName>
                </value>
                <value>
                    <fullName>BAAQMD</fullName>
                </value>
                <value>
                    <fullName>SanDiego-APCD</fullName>
                </value>
                <value>
                    <fullName>SCAQMD</fullName>
                </value>
                <value>
                    <fullName>BishopPaiute</fullName>
                </value>
                <value>
                    <fullName>BlueLake</fullName>
                </value>
                <value>
                    <fullName>CabazonBand</fullName>
                </value>
                <value>
                    <fullName>CampoBand</fullName>
                </value>
                <value>
                    <fullName>Cortina</fullName>
                </value>
                <value>
                    <fullName>FtIndependence</fullName>
                </value>
                <value>
                    <fullName>HoopaValley</fullName>
                </value>
                <value>
                    <fullName>Karuk</fullName>
                </value>
                <value>
                    <fullName>LaPostaBand</fullName>
                </value>
                <value>
                    <fullName>LonePinePaiute-Shoshone</fullName>
                </value>
                <value>
                    <fullName>ManzanitaBand</fullName>
                </value>
                <value>
                    <fullName>MorongoBand</fullName>
                </value>
                <value>
                    <fullName>PalaBand</fullName>
                </value>
                <value>
                    <fullName>PechangaBand</fullName>
                </value>
                <value>
                    <fullName>SantaRosa</fullName>
                </value>
                <value>
                    <fullName>Torres-MartinezBand</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Arizona</fullName>
                </value>
                <value>
                    <fullName>California</fullName>
                </value>
                <value>
                    <fullName>Hawaii</fullName>
                </value>
                <value>
                    <fullName>Nevada</fullName>
                </value>
                <value>
                    <fullName>Pacific Islands</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>State</fullName>
                </value>
                <value>
                    <fullName>Tribal</fullName>
                </value>
                <value>
                    <fullName>Federal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Agency</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Agency Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Agencies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>